添加部分功能

--- a/config/SystemGlobals.properties
+++ b/config/SystemGlobals.properties
@@ -7,9 +7,9 @@ basetestresourcesfolder=src.test.resources
 
 
 #outputfolder 输出项目目录
-outputfolder=/Users/jianshengfu/IdeaProjects/ml-platform-jpa
+outputfolder=/Users/jianshengfu/IdeaProjects/ml-platform-jpa-mvc
 #base package 项目基础包名
-basepackage=com.basepac.dataapp.search.ml.platform.jpa
+basepackage=com.meituan.dataapp.search.ml.platform.jpa
 #映射文件存放的文件夹
 Mappersfolder=mysqlMappers
 groupId=ml-platform-jpa
