--- a/config/SystemGlobals-back.properties
+++ b/config/SystemGlobals-back.properties
@@ -7,16 +7,16 @@ basetestresourcesfolder=src.test.resources
 
 
 #outputfolder 输出项目目录
-outputfolder=/Users/jianshengfu/IdeaProjects/com.bj.supercar/com.bj.supercar.jpa
+outputfolder=/Users/jianshengfu/IdeaProjects/ml-platform-jpa-mvc
 #base package 项目基础包名
-basepackage=com.bj.supercar.jpa
+basepackage=com.meituan.dataapp.search.ml.platform.jpa
 #映射文件存放的文件夹
 Mappersfolder=mysqlMappers
-groupId=com.bj.supercar.jpa
-artifactId=com-bj-supercar-jpa
+groupId=ml-platform-jpa
+artifactId=ml-platform-jpa
 ######################数据库连接配置信息#########################
 #dburl
-ConnetionURL=jdbc:mysql://localhost:3306/db_supercar?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+ConnetionURL=jdbc:mysql://localhost:3306/db_modeltraining?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 DriversClass=com.mysql.jdbc.Driver
 UserName=fjsh
 PassWord=271608
